--- a/ga_char.html
+++ b/ga_char.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<h1><strong><a href="IntroduceMS.html">Introduce Myself</a></strong></h1>
+	<h1><strong><a href="index.html">Introduce Myself</a></strong></h1>
 
 	<h2>김세호</h2>
 <ol>
