--- a/hobby.html
+++ b/hobby.html
@@ -10,10 +10,10 @@
 
 	<h2>김세호</h2>
 <ol>
-	<li><a href="age.html">목차</a></li>
-	<li><a href="job.html">목차</a></li>
-	<li><a href="hobby.html">목차</a></li>
-	<li><a href="ga_char.html">목차</a></li>
+	<li><a href="age.html">나이</a></li>
+	<li><a href="job.html">직업</a></li>
+	<li><a href="hobby.html">취미</a></li>
+	<li><a href="ga_char.html">특기 및 성격</a></li>
 </ol>
 
 <img src="Say_Ho.jpg" width="400">
