--- a/index.html
+++ b/index.html
@@ -18,3 +18,29 @@
 <img src="Say_Ho.jpg" width="400">
 </body>
 </html>
+
+<p>
+<div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://introduce-myself-1.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
+<!-- 동영상 넣는 방법 유투브 동영상 share 누르고 삽입 <iframe>코드 이용 -->
+<!-- 댓글기능 추가하려면 백엔드 기술을 이용해야한다. disqus, LiveRe서비스를 이용해서 이용
+disqus 로그인 /관리자로 들어가서/ your site 클릭 /new 클릭/ 웹사이트 이름 등록 / univesal code 클릭 /
+1번에 있는 코드 카피해서 넣기 / 웹서버를 이용해서 파일을 열면 댓글 달 수 있다. -->
