--- a/gf.html
+++ b/gf.html
@@ -16,10 +16,14 @@
 	<li><a href="ga_char.html">특기 및 성격</a></li>
 	<li><a href="gf.html">♥</a></li>
 </ol>
-<img src="Say_Ho.jpg" width="400">
+
+<img src="gf.jpg" width="400">
+<br>여자 친구를 소개합니다!
+<br>자주 물어보는 질문으로 self Q&A
+<br>어디서 만났나요? 소개팅
+<br>얼굴은 안보이게 할게요...
 </body>
 </html>
-
 <p>
 <div id="disqus_thread"></div>
 <script>
@@ -41,7 +45,3 @@
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </p>
-<!-- 동영상 넣는 방법 유투브 동영상 share 누르고 삽입 <iframe>코드 이용 -->
-<!-- 댓글기능 추가하려면 백엔드 기술을 이용해야한다. disqus, LiveRe서비스를 이용해서 이용
-disqus 로그인 /관리자로 들어가서/ your site 클릭 /new 클릭/ 웹사이트 이름 등록 / univesal code 클릭 /
-1번에 있는 코드 카피해서 넣기 / 웹서버를 이용해서 파일을 열면 댓글 달 수 있다. -->
