--- a/hobby.html
+++ b/hobby.html
@@ -14,6 +14,7 @@
 	<li><a href="job.html">직업</a></li>
 	<li><a href="hobby.html">취미</a></li>
 	<li><a href="ga_char.html">특기 및 성격</a></li>
+	<li><a href="gf.html">♥</a></li>
 </ol>
 
 <img src="Say_Ho.jpg" width="400">
