--- a/age.html
+++ b/age.html
@@ -3,24 +3,57 @@
 <head>
 <title>Introduce Myself</title>
 <meta charset="utf-8">
+<style>
+        a {
+            color:black;
+            
+            text-decoration: none;
+        }
+        h1 {
+            text-align: center;
+            font-size : 40px;
+            border-bottom : 1px solid black;
+            margin : 0;
+            padding : 20px;
+
+        }
+        
+        #grid {
+            border : 5px solid green;
+            display: grid;
+            grid-template-columns: 180px 1fr;
+        }
+        div{
+            border:5px solid pink;
+            padding: 10px;
+        }
+        .saw {
+        color: deeppink;
+        }
+</style>
 </head>
 
 <body>
 	<h1><strong><a href="index.html">Introduce Myself</a></strong></h1>
 
-	<h2>김세호</h2>
-<ol>
-	<li><a href="age.html">나이</a></li>
-	<li><a href="job.html">직업</a></li>
-	<li><a href="hobby.html">취미</a></li>
-	<li><a href="ga_char.html">특기 및 성격</a></li>
-	<li><a href="gf.html">♥</a></li>
-</ol>
-
-<img src="Say_Ho.jpg" width="400">
-<br>나이 : 29세 (94년생)
-<br><br>출생지 : 서울(차병원)
+    <div id="grid">
+        <div>
+        <ol>
+            <li><a href="name.html">이름</a></li>
+            <li><a href="age.html"class="saw">나이</a></li>
+            <li><a href="job.html">직업</a></li>
+            <li><a href="hobby.html">취미</a></li>
+            <li><a href="ga_char.html">특기 및 성격</a></li>
+            <li><a href="gf.html">♥</a></li>
+        </ol>
+        </div>
+<div>
+<!-- <img src="Say_Ho.jpg" width="400"> -->
+<br><font size="6px">생일 : 94.10.25</font>
+<br><br><font size="6px">출생지 : 서울(차병원)</font>
 <br><br><iframe width="560" height="315" src="https://www.youtube.com/embed/7zUAlj-2Pis" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+</div>
 </body>
 </html>
 <p>
