--- a/age.html
+++ b/age.html
@@ -3,34 +3,7 @@
 <head>
 <title>Introduce Myself</title>
 <meta charset="utf-8">
-<style>
-        a {
-            color:black;
-            
-            text-decoration: none;
-        }
-        h1 {
-            text-align: center;
-            font-size : 40px;
-            border-bottom : 1px solid black;
-            margin : 0;
-            padding : 20px;
-
-        }
-        
-        #grid {
-            border : 5px solid green;
-            display: grid;
-            grid-template-columns: 180px 1fr;
-        }
-        div{
-            border:5px solid pink;
-            padding: 10px;
-        }
-        .saw {
-        color: deeppink;
-        }
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -49,7 +22,7 @@
         </div>
 <div>
 <!-- <img src="Say_Ho.jpg" width="400"> -->
-<br><font size="6px">생일 : 94.10.25</font>
+<font size="6px">생일 : 94.10.25</font>
 <br><br><font size="6px">출생지 : 서울(차병원)</font>
 <br><br><iframe width="560" height="315" src="https://www.youtube.com/embed/7zUAlj-2Pis" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
