--- a/name.html
+++ b/name.html
@@ -3,34 +3,7 @@
 <head>
 <title>Introduce Myself</title>
 <meta charset="utf-8">
-<style>
-    a {
-            color:black;
-            
-            text-decoration: none;
-        }
-        h1 {
-            text-align: center;
-            font-size : 40px;
-            border-bottom : 1px solid black;
-            margin : 0;
-            padding : 20px;
-
-        }
-        
-        #grid {
-            border : 5px solid green;
-            display: grid;
-            grid-template-columns: 180px 1fr;
-        }
-        div{
-            border:5px solid pink;
-            padding: 10px;
-        }
-        .saw {
-        color: deeppink;
-        }
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
