--- a/gf.html
+++ b/gf.html
@@ -23,7 +23,7 @@
 
 <div>
 <img src="gf.jpg" width="400">
-<font size="6px"> 여자 친구를 소개합니다!</font>
+<br><font size="6px"> 여자 친구를 소개합니다!</font>
 <br><font size="6px">자주 물어보는 질문으로 self Q&A</font>
 <br><font size="6px">어디서 만났나요? 소개팅</font>
 <br><font size="6px">얼굴은 안보이게 할게요...</font>
